Adding Search Criteria with search body request params, corrections in SearchController, correcting DB connection in appsettings, adding configuration changes in program main file, updating project dependencies

--- a/Thesis.courseWebApp.Backend.csproj
+++ b/Thesis.courseWebApp.Backend.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="HtmlAgilityPack" Version="1.11.55" />
     <PackageReference Include="Microsoft.IdentityModel" Version="7.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
-	<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+	  <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.0" />
+	 <Compile Update="Data\AppDbContext.cs" />
   </ItemGroup>
 
 </Project>
