Changes for login,register,password-reset api calls and necessary functions, adding EmailService logic-class,

--- a/Thesis.courseWebApp.Backend.csproj
+++ b/Thesis.courseWebApp.Backend.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.55" />
     <PackageReference Include="Microsoft.IdentityModel" Version="7.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
