--- a/Thesis.courseWebApp.Backend.csproj
+++ b/Thesis.courseWebApp.Backend.csproj
@@ -9,6 +9,10 @@
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.55" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel" Version="7.0.0" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0" />
 	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
